입고 기능 추가

--- a/templates/erp/product_list.html
+++ b/templates/erp/product_list.html
@@ -21,6 +21,7 @@
             <p class="card-text">설명: {{ product.description }}</p>
             <p class="card-text">가격: {{ product.price }}</p>
             <p class="card-text">사이즈: {{ product.size }}</p>
+            <p class="card-text">수량: {{ product.quantity }}</p>
             <hr>
         </div>
         {% endif %}
@@ -36,6 +37,7 @@
             <p class="card-text">설명: {{ product.description }}</p>
             <p class="card-text">가격: {{ product.price }}</p>
             <p class="card-text">사이즈: {{ product.size }}</p>
+            <p class="card-text">수량: {{ product.quantity }}</p>
             <hr>
         </div>
         {% endif %}
