--- a/templates/base.html
+++ b/templates/base.html
@@ -45,7 +45,7 @@
                         <a class="nav-link" href="/product-create"> 상품등록 <span class="sr-only"></span></a>
                     </li>
                     <li class="nav-item active">
-                        <a class="nav-link" href="#"> 입고 <span class="sr-only"></span></a>
+                        <a class="nav-link" href="/inbound-create"> 입고 <span class="sr-only"></span></a>
                     </li>
                     <li class="nav-item active">
                         <a class="nav-link" href="#"> 출고 <span class="sr-only"></span></a>
