--- a/templates/base.html
+++ b/templates/base.html
@@ -37,8 +37,10 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container">
+            {% if not user.is_authenticated %}
+            <a class="navbar-brand" href="/login">재고관리시스템</a>
+            {% elif user.is_authenticated %}
             <a class="navbar-brand" href="/product-list">재고관리시스템</a>
-            {% if user.is_authenticated %}
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item active">
