--- a/templates/base.html
+++ b/templates/base.html
@@ -50,7 +50,7 @@
                         <a class="nav-link" href="/inbound-create"> 입고 <span class="sr-only"></span></a>
                     </li>
                     <li class="nav-item active">
-                        <a class="nav-link" href="#"> 출고 <span class="sr-only"></span></a>
+                        <a class="nav-link" href="/outbound-create"> 출고 <span class="sr-only"></span></a>
                     </li>
                 </ul>
             </div>
