--- a/templates/erp/inbound_create.html
+++ b/templates/erp/inbound_create.html
@@ -6,12 +6,19 @@
 {% block content %}
 <div class="container">
     <div class="wrap">
-        <h2 class="title-center">입고</h2>
+        <a href="/inbound-create" style="text-decoration: none; color: black;">
+            <h2 class="title-center">입고</h2>
+        </a>
         <form class="form-area" method="post" action="/inbound-create/">
             {% csrf_token %}
             <div class="form-group mt-2 mb-2">
                 <label for="code">상품코드</label>
-                <input type="text" class="form-control" id="code" name="code">
+                <select name="code" class="form-select" aria-label="Default select example">
+                    <option value="">상품코드를 선택하세요</option>
+                    {% for product in products %}
+                    <option value="{{product.code}}">{{product.code}}</option>
+                    {% endfor%}
+                </select>
             </div>
             <div class="form-group mt-2 mb-2">
                 <label for="quantity">수량</label>
@@ -25,7 +32,7 @@
             {% endif %}
             <div style="float: right">
                 <button type="submit" class="btn btn-primary">등록</button>
-                <a href="#" class="btn btn-secondary">재고 관리</a>
+                <a href="/product-list" class="btn btn-secondary">재고 관리</a>
             </div>
         </form>
 
